add src for mysql result class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,8 @@
 PROJECT(HENRYC++)
 MESSAGE("main dir:" ${PROJECT_SOURCE_DIR})
+cmake_minimum_required(VERSION 2.8)
 
-#reset the bin add lib store dir
+#reset the bin and lib store dir
 SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 
@@ -11,6 +12,22 @@ INCLUDE_DIRECTORIES("/usr/local/mysql/include")
 ADD_LIBRARY(mysqlclient SHARED IMPORTED)
 SET_TARGET_PROPERTIES(mysqlclient PROPERTIES IMPORTED_LOCATION
     "/usr/local/mysql/lib/libmysqlclient.so")
+
+#include boost head files
+INCLUDE_DIRECTORIES("/usr/include")
+
+#use cmake moudle to find phtread lib path
+#so you can add the lib my ${CMAKE_THREAD_LIBS_INIT}
+find_package(Threads)
+
+#add boost lib
+ADD_LIBRARY(boost_thread SHARED IMPORTED)
+SET_TARGET_PROPERTIES(boost_thread PROPERTIES IMPORTED_LOCATION
+    "/usr/local/lib/libboost_thread.a")
+
+ADD_LIBRARY(boost_system SHARED IMPORTED)
+SET_TARGET_PROPERTIES(boost_system PROPERTIES IMPORTED_LOCATION
+   "/usr/local/lib/libboost_system.a")
 
 #include myown mysql impl
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/henrylib/mysql)
