--- a/henrylib/mysql/CMakeLists.txt
+++ b/henrylib/mysql/CMakeLists.txt
@@ -1,3 +1,5 @@
-SET(MYSQL_LIST mysql_connection.cpp)
+SET(MYSQL_LIST 
+    mysql_connection.cpp
+    mysql_result.cpp)
 ADD_LIBRARY(mysql ${MYSQL_LIST})
 SET(LIBRARY_OUTPUT_PATH, ${PROJECT_SOURCE_DIR}/lib)
