--- a/henrylib/myutility/CMakeLists.txt
+++ b/henrylib/myutility/CMakeLists.txt
@@ -1,8 +1,4 @@
-#SET(MYUTILITY_LIST
-#   misc.h
-#    singleton.h 
-#    arg_helper.h
-#    noncopyable.h
-#   thread_tools.h)
+SET(MYUTILITY_LIST
+   thread_tools.cpp)
 
-#ADD_LIBRARY(myutility ${MYUTILITY_LIST})
+ADD_LIBRARY(myutility ${MYUTILITY_LIST})
