--- a/dayexercise/CMakeLists.txt
+++ b/dayexercise/CMakeLists.txt
@@ -1,10 +1,2 @@
-ADD_DEFINITIONS(-DUSE_TLS)
-
-SET(PTHREAD_LIST pthread.cpp)
-ADD_EXECUTABLE(apppthread ${PTHREAD_LIST})
-
-#link myutility
-TARGET_LINK_LIBRARIES(apppthread myutility)
-
-#link pthread
-TARGET_LINK_LIBRARIES(apppthread ${CMAKE_THREAD_LIBS_INIT})
+ADD_SUBDIRECTORY(word_count)
+ADD_SUBDIRECTORY(pthread)
