add network socks ops

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,7 @@ SET_TARGET_PROPERTIES(boost_system PROPERTIES IMPORTED_LOCATION
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/henrylib/myutility)
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/henrylib/mysql)
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/henrylib/mylog)
+INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/henrylib/mynetwork)
 
 #define log enable level module
 #OPTION(DEBUG_MODE "ON for debug or OFF for release" ON)
