--- a/henrylib/CMakeLists.txt
+++ b/henrylib/CMakeLists.txt
@@ -2,3 +2,4 @@ ADD_SUBDIRECTORY(myutility)
 ADD_SUBDIRECTORY(mysql)
 ADD_SUBDIRECTORY(mylog)
 ADD_SUBDIRECTORY(mynetwork)
+ADD_SUBDIRECTORY(mythread)
